# coek

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml-bad  .readthedocs.yaml  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  README.rst  README_CMAKE  build.sh  build_dev.sh  install_with_pybind11.sh  setup.py  setup_configure.py  thirdparty.cmake  tmp
app/demos/: CMakeLists.txt  README.md  demo1.cpp
coek/: CMakeLists.txt  coek.hpp  coek_expr.hpp  coek_indexed.hpp  coek_model.hpp  lqcp.cpp  solve0.cpp  writer.cpp
coek/ATTIC/: ast_terms.hpp  coek_expr.cpp  coek_expr.hpp
coek/OLD/: objective_terms.cpp  objective_terms.hpp
coek/abstract/: expr_rule.cpp  expr_rule.hpp
coek/api/: component_map.cpp  component_map.hpp  constants.hpp  constraint.cpp  constraint.hpp  expression.cpp  expression.hpp  expression_visitor.cpp  expression_visitor.hpp  indexed_container.defs.hpp  indexed_container.hpp  intrinsic_fn.cpp  intrinsic_fn.hpp  objective.cpp  objective.hpp  parameter_array.cpp  parameter_assoc_array.cpp  parameter_assoc_array_repn.hpp  variable_array.cpp  variable_array.hpp  variable_assoc_array.cpp  variable_assoc_array.hpp  variable_assoc_array_repn.hpp
coek/ast/: ast_operators.hpp  ast_terms.hpp  base_terms.cpp  base_terms.hpp  compact_terms.cpp  compact_terms.hpp  constraint_terms.cpp  constraint_terms.hpp  expr_terms.cpp  expr_terms.hpp  objective_terms.cpp  objective_terms.hpp  value_terms.cpp  value_terms.hpp  varray.cpp  varray.hpp  visitor.hpp  visitor_fns.hpp  visitor_mutable_values.cpp  visitor_symdiff.cpp  visitor_to_MutableNLPExpr.cpp  visitor_to_QuadraticExpr.cpp  visitor_to_list.cpp  visitor_variables.cpp  visitor_write_expr.cpp
coek/autograd/: autograd.cpp  autograd.hpp  cppad_repn.cpp  cppad_repn.hpp  unknownad_repn.hpp
coek/compact/: ast_set.cpp  ast_set.hpp  coek_exprterm.hpp  coek_indexed.cpp  coek_indexed.hpp  coek_sets.cpp  coek_sets.hpp  component_map.cpp  component_map.hpp  constraint_sequence.cpp  constraint_sequence.hpp  expression_sequence.cpp  expression_sequence.hpp  indexed_container.hpp  objective_sequence.cpp  objective_sequence.hpp  parameter_map.cpp  sequence_context.cpp  sequence_context.hpp  variable_array.cpp  variable_assoc_array.cpp  variable_assoc_array.hpp  variable_assoc_array_repn.hpp  variable_map.cpp  variable_map.hpp  variable_sequence.cpp  variable_sequence.hpp  visitor_exprtemplate.cpp
coek/expr/: ast_term.cpp  ast_visitors.hpp  coek_expr.cpp  coek_exprterm.hpp  varray.cpp  varray.hpp  visitor_to_MutableNLPExpr.cpp  visitor_to_QuadraticExpr.cpp  visitor_to_list.cpp
coek/jump/: lqcp_array.cpp  lqcp_compact.cpp  lqcp_map.cpp
coek/misc/: knapsack.cpp  nqueens.cpp  pmedian.cpp
coek/model/: coek_model.cpp  compact_model.cpp  compact_model.hpp  model.cpp  model.hpp  model_repn.hpp  nlp_model.cpp  nlp_model.hpp  reader_jpof.cpp  writer_lp.cpp  writer_nl.cpp
coek/models/: coek_models.hpp
coek/set/: ast_set.hpp  coek_indexed.cpp  coek_sets.cpp
coek/solvers/: coek_gurobi.hpp  gurobi.cpp  ipopt.cpp  ipopt.hpp  loadlib.cpp  solver.cpp  solver.hpp  solver_repn.cpp  solver_repn.hpp  testsolver.cpp  testsolver.hpp
coek/util/: index_vector.cpp  index_vector.hpp  io_utils.hpp  map_utils.hpp  sequence.hpp
doc/: CMakeLists.txt  Doxyfile.in  api.rst  bibliography.rst  build_doc.sh  coek_doc_setup.sh  components_elementary.rst  components_indexed.rst  components_sequence.rst  conf.py  environment.yml  examples.rst  expression_fn.rst  expressions.rst  index.rst  models.rst  parameter.rst  reference.rst  requirements.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
examples/: CMakeLists.txt  invquad.cpp  resolve.py  rosenbr.cpp  simplelp1.cpp  srosenbr.cpp
examples/cute/: CUTE_classifications.py  test_poek.py  test_pyomo.py
examples/pyomo/: pmedian.py
examples/resolve/: resolve.py
lib/: CMakeLists.txt
lib/coek/: CMakeLists.txt  README.md
lib/coek_utils/: setup.py
lib/libcoek/: install_with_pybind11.sh
lib/poek/: README.md  setup.py
lib/pycoek/: CMakeLists.txt  README.md
lib/pyomo_coek/: setup.py
poek/: CMakeLists.txt  Makefile  Makefile_build.py  NOTES  README_CMAKE  __init__.py  build.py  coek_build.py  coek_capi.h  config.py  expr.py  expr_api.cpp  expr_api.h  expr_intrinsic.h  expr_types.cpp  expr_types.h  func.py  globals.py  gurobi.cpp  intrinsic.py  ipopt.cpp  ipopt.opt  model.cpp  model.h  model.py  pmedian.py  poek_cppyy.py  poek_micro  poek_pybind11.py  poek_solve0  poek_writer  solver.cpp  solvers.py  test_autograd.py  test_expr.py  test_intrinsic.py  test_logical.py  test_model.py  test_relational.py  timing.py  (+5 more)
poek/examples/: ipopt.py  tmp.py  (+5 more)
pybind11/: CMakeLists.txt  pycoek.cpp  setup.py  test_expr.py  test_relational.py
python/: CMakeLists.txt  pycoek.cpp  test_expr.py  test_npexpr.py
src/: CMakeLists.txt  Makefile  blah.cpp  coek_capi.cpp  coek_capi.h  coek_expr.hpp  coek_indexed.hpp  coek_model.hpp  coek_sets.hpp  coek_util.hpp  context.hpp  context_objects.cpp  context_objects.hpp  expr.py  expr_api.cpp  expr_api.h  expr_types.cpp  expr_types.h  expr_types.hpp  intrinsic.cpp  intrinsic.py  model.cpp  model.h  model.hpp  model.py  solver.cpp  solver.h  solver.hpp  utilities.py
test/: CMakeLists.txt  demo1.cpp  lqcp.cpp  lqcp2.cpp  lqcp_array.cpp  lqcp_compare  lqcp_map.cpp  resolve.cpp  rlqcp.cpp  template.cpp  test_autograd_cppad.cpp  test_capi.cpp  test_con.cpp  test_cppad_autograd.cpp  test_examples.cpp  test_expr.cpp  test_expr_visitors.cpp  test_indexed.cpp  test_model.cpp  test_param.cpp  test_readers.cpp  test_sequence.cpp  test_sets.cpp  test_testsolver.cpp  test_var.cpp  test_writers.cpp
tests/: CMakeLists.txt  ipopt.opt  lqcp.cpp  lqcp2.cpp  resolve.cpp  resolve.sh  rlqcp.cpp  runner.cpp  template.cpp  test_capi.cpp  test_context_objects.cpp  test_cppad_autograd.cpp  test_cppad_model.cpp  test_examples.cpp  test_expr.cpp  test_expr_manager_objects.cpp  test_expr_visitors.cpp  test_indexed.cpp  test_model.cpp  test_sets.cpp  test_simple_model.cpp  test_testsolver.cpp  test_writers.cpp
tpl/: CMakeLists.txt  thirdparty.cmake
(+1908 files in other folders)
